# acts

CI/: run_examples.sh
Core/include/Acts/EventData/: MultiTrajectory.hpp  (+2 more)
Core/src/Geometry/: ConeVolumeBounds.cpp  CuboidVolumeBuilder.cpp  GenericCuboidVolumeBounds.cpp  Polyhedron.cpp  TrapezoidVolumeBounds.cpp
Core/src/Propagator/: StraightLineStepper.cpp
Core/src/Surfaces/: AnnulusBounds.cpp  ConeSurface.cpp  CylinderSurface.cpp  DiscTrapezoidalBounds.cpp  IntersectionHelper2D.cpp  PlaneSurface.cpp  Surface.cpp  VerticesHelper.cpp
Core/src/Visualization/: GeometryView3D.cpp
Examples/Run/: CMakeLists.txt
Examples/Run/Reproducibility/: CMakeLists.txt  ErrorHandling.hpp  ParallelReproducibilityTest.cpp  ReadRootFile.cpp  ReadRootFile.hpp  RootData.cpp  TupleKey.hpp  TypeErasedHistogram.hpp
Examples/Scripts/: testReproducibility.sh
Plugins/DD4hep/src/: DD4hepLayerBuilder.cpp
Plugins/Digitization/src/: CartesianSegmentation.cpp
Plugins/TGeo/src/: TGeoDetectorElement.cpp  TGeoSurfaceConverter.cpp
Tests/Benchmarks/: BoundaryCheckBenchmark.cpp  CMakeLists.txt  EagenBenchmark.cpp  RayFrustumBenchmark.cpp  SurfaceIntersectionBenchmark.cpp
Tests/Core/MagneticField/: SolenoidBFieldTests.cpp
Tests/Core/Propagator/: JacobianTests.cpp
Tests/Core/Surfaces/: DiscTrapezoidalBoundsTests.cpp
Tests/Core/Utilities/: BFieldMapUtilsTests.cpp  UnitConversionTests.cpp
Tests/Core/Volumes/: CylinderVolumeBoundsTests.cpp
Tests/Integration/: PropagationTestBase.hpp  PropagationTestHelper.hpp  PropagationTests.cpp
Tests/IntegrationTests/: PropagationTests.hpp
(+127 files in other folders)
